[gd_scene load_steps=9 format=1]

[ext_resource path="res://Scripts/MenuGUI.gd" type="Script" id=1]
[ext_resource path="res://Art/SolidWhite.png" type="Texture" id=2]
[ext_resource path="res://Art/GUI/Cartwheel Big.fnt" type="BitmapFont" id=3]
[ext_resource path="res://GUI Theme.tres" type="Theme" id=4]
[ext_resource path="res://Art/GUI/Cartwheel.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Scenes/Torch.tscn" type="PackedScene" id=6]
[ext_resource path="res://Art/ForestBackground.png" type="Texture" id=7]
[ext_resource path="res://SampleLibrary.tres" type="SampleLibrary" id=8]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="DarkBackground" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Sprite" type="Sprite" parent="DarkBackground"]

transform/scale = Vector2( 46.4292, 27.5906 )
texture = ExtResource( 2 )
centered = false
modulate = Color( 0.0859375, 0.00906372, 0.00906372, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="MainMenu" type="Node2D" parent="CanvasLayer"]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]

editor/display_folded = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -330.0
margin/top = -118.0
margin/right = -630.0
margin/bottom = -418.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 24.0
margin/right = 347.0
margin/bottom = 87.0
custom_fonts/font = ExtResource( 3 )
text = "Game Over!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ReplayButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 107.0
margin/right = 347.0
margin/bottom = 139.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play Again"
flat = false

[node name="BackButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 4 )
margin/left = 0.0
margin/top = 159.0
margin/right = 347.0
margin/bottom = 191.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back to menu"
flat = false

[node name="HBoxContainer 2" type="HBoxContainer" parent="CanvasLayer/MainMenu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 211.0
margin/right = 347.0
margin/bottom = 233.0
alignment = 0

[node name="Score" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 66.0
margin/bottom = 22.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.601563, 0.601563, 0.601563, 1 )
text = "Score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Highscore" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer/HBoxContainer 2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 70.0
margin/top = 0.0
margin/right = 347.0
margin/bottom = 22.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MainMenu/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 253.0
margin/right = 347.0
margin/bottom = 275.0
alignment = 0

[node name="Time" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 48.0
margin/bottom = 22.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.6, 0.6, 0.6, 1 )
text = "Time"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Time Spent" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 52.0
margin/top = 0.0
margin/right = 347.0
margin/bottom = 22.0
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Torch1" parent="CanvasLayer/MainMenu" instance=ExtResource( 6 )]

transform/pos = Vector2( 908.528, 338.856 )

[node name="Torch" parent="CanvasLayer/MainMenu" instance=ExtResource( 6 )]

[node name="TextureFrame" type="Sprite" parent="."]

transform/pos = Vector2( 0, 624.822 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 0, -925 )
region = true
region_rect = Rect2( 0, 0, 2394, 925 )

[node name="MakeStuffDark" type="CanvasModulate" parent="."]

color = Color( 0.386719, 0.208466, 0.208466, 1 )

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = ExtResource( 8 )
config/pitch_random = 0.0

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/ReplayButton" to="." method="_on_ReplayButton_pressed"]

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]


