[gd_scene load_steps=10 format=1]

[ext_resource path="res://Scripts/MenuGUI.gd" type="Script" id=1]
[ext_resource path="res://Art/SolidWhite.png" type="Texture" id=2]
[ext_resource path="res://GUI Theme.tres" type="Theme" id=3]
[ext_resource path="res://Art/GUI/Cartwheel.fnt" type="BitmapFont" id=4]
[ext_resource path="res://Scenes/Torch.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/GUI/Cartwheel Big.fnt" type="BitmapFont" id=6]
[ext_resource path="res://Art/GUI/Player1Controls.png" type="Texture" id=7]
[ext_resource path="res://Art/GUI/Player2Controls.png" type="Texture" id=8]
[ext_resource path="res://Art/ForestBackground.png" type="Texture" id=9]

[node name="Control" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="DarkBackground" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Sprite" type="Sprite" parent="DarkBackground"]

transform/scale = Vector2( 46.4292, 27.5906 )
texture = ExtResource( 2 )
centered = false
modulate = Color( 0.0859375, 0.00906372, 0.00906372, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="MainMenu" type="Node2D" parent="CanvasLayer"]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]

editor/display_folded = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -330.0
margin/top = -118.0
margin/right = -630.0
margin/bottom = -418.0
custom_constants/separation = 20
alignment = 1

[node name="TutorialButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 56.0
margin/right = 300.0
margin/bottom = 88.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Tutorial"
flat = false

[node name="SinglePlayerButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 108.0
margin/right = 300.0
margin/bottom = 140.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Single Player"
flat = false

[node name="MultiPlayerButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 160.0
margin/right = 300.0
margin/bottom = 192.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Local Multiplayer"
flat = false

[node name="ExitButton" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 0.0
margin/top = 212.0
margin/right = 300.0
margin/bottom = 244.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MainMenu"]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -330.0
margin/top = -126.0
margin/right = -630.0
margin/bottom = -167.0
custom_constants/line_separation = 4
bbcode/enabled = false
bbcode/bbcode = "Reach the portal in the sky before you die, so that you can finally return to your homeland!"
visible_characters = -1

[node name="Torch1" parent="CanvasLayer/MainMenu" instance=ExtResource( 5 )]

transform/pos = Vector2( 908.528, 338.856 )

[node name="Torch" parent="CanvasLayer/MainMenu" instance=ExtResource( 5 )]

[node name="Options" type="Node2D" parent="CanvasLayer/MainMenu"]

editor/display_folded = true
transform/pos = Vector2( 504.002, 438.002 )

[node name="NightModeCheck" type="CheckBox" parent="CanvasLayer/MainMenu/Options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 46.0
margin/top = -28.0
margin/right = 152.0
margin/bottom = -5.0
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
text = "Night Mode\?"
flat = false
align = 0

[node name="MusicCheck" type="CheckBox" parent="CanvasLayer/MainMenu/Options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -136.0
margin/top = -28.0
margin/right = -30.0
margin/bottom = -5.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 0
shortcut = null
text = "Music\?"
flat = false
align = 0

[node name="FullscreenCheck" type="CheckBox" parent="CanvasLayer/MainMenu/Options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -60.0
margin/top = -28.0
margin/right = 46.0
margin/bottom = -5.0
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
text = "Fullscreen\?"
flat = false
align = 0

[node name="DifficultySlider" type="HSlider" parent="CanvasLayer/MainMenu/Options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -138.0
margin/top = -1.0
margin/right = 62.0
margin/bottom = 15.0
range/min = 0.0
range/max = 10.0
range/step = 10.0
range/page = 0.0
range/value = 2.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="DifficultyLabel" type="Label" parent="CanvasLayer/MainMenu/Options"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 68.0
margin/top = 0.0
margin/right = 125.0
margin/bottom = 14.0
text = "Difficulty"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SizeSlider" type="HSlider" parent="CanvasLayer/MainMenu/Options"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -138.0
margin/top = 22.0
margin/right = 62.0
margin/bottom = 38.0
range/min = 0.0
range/max = 10.0
range/step = 10.0
range/page = 0.0
range/value = 2.0
range/exp_edit = false
range/rounded = true
tick_count = 0
ticks_on_borders = true
focus_mode = 2

[node name="SizeLabel" type="Label" parent="CanvasLayer/MainMenu/Options"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 68.0
margin/top = 23.0
margin/right = 125.0
margin/bottom = 37.0
text = "Size"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LoadingScreen" type="Node2D" parent="CanvasLayer"]

visibility/visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/LoadingScreen"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 351.0
margin/top = 448.0
margin/right = 674.0
margin/bottom = 522.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode/enabled = false
bbcode/bbcode = "...loading..."
visible_characters = -1

[node name="PlayButton" type="Button" parent="CanvasLayer/LoadingScreen"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 362.0
margin/top = 442.0
margin/right = 662.0
margin/bottom = 515.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false
clip_text = true

[node name="Player1Controls" type="Sprite" parent="CanvasLayer/LoadingScreen"]

transform/pos = Vector2( 277.737, 239.854 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name="Sprite 2" type="Sprite" parent="CanvasLayer/LoadingScreen/Player1Controls"]

visibility/opacity = 0.5
visibility/behind_parent = true
transform/pos = Vector2( 1.0119, 3.03574 )
transform/scale = Vector2( 67.7717, 45.5946 )
texture = ExtResource( 2 )
modulate = Color( 0.0742188, 0.00144958, 0.00144958, 1 )

[node name="Player2Controls" type="Sprite" parent="CanvasLayer/LoadingScreen"]

transform/pos = Vector2( 779.927, 239.854 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )

[node name="Sprite 2" type="Sprite" parent="CanvasLayer/LoadingScreen/Player2Controls"]

visibility/opacity = 0.5
visibility/behind_parent = true
transform/pos = Vector2( -53.3213, 3.03574 )
transform/scale = Vector2( 67.7717, 45.59 )
texture = ExtResource( 2 )
modulate = Color( 0.00144958, 0.00429213, 0.0742188, 1 )

[node name="TextureFrame" type="Sprite" parent="."]

transform/pos = Vector2( 0, 624.822 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( 0, -925 )
region = true
region_rect = Rect2( 0, 0, 2394, 925 )

[node name="MakeStuffDark" type="CanvasModulate" parent="."]

color = Color( 0.386719, 0.208466, 0.208466, 1 )

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/SinglePlayerButton" to="." method="_on_SinglePlayerButton_pressed"]

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/MultiPlayerButton" to="." method="_on_MultiPlayerButton_pressed"]

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]

[connection signal="toggled" from="CanvasLayer/MainMenu/Options/MusicCheck" to="." method="_on_MusicCheck_toggled"]

[connection signal="toggled" from="CanvasLayer/MainMenu/Options/FullscreenCheck" to="." method="_on_FullscreenCheck_toggled"]

[connection signal="pressed" from="CanvasLayer/LoadingScreen/PlayButton" to="." method="_on_PlayButton_pressed"]


